Use msos/core.uc.js instead of versioned one

--- a/index.html
+++ b/index.html
@@ -14,6 +14,79 @@
 	<link rel='shortcut icon' href='../mobilesiteos/images/osm.ico' />
 
     <style>
+		html, body, table, div, article, section, fieldset {
+			font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+		}
+
+		/* Std MSOS CSS: notify popup */
+		#notify_container {
+			position: absolute;
+			width: 18em;
+			z-index: 9999;
+		}
+		.notify {
+			background-color: #111;
+			border-radius: 0.4em;
+			margin-bottom: 1em;
+			opacity: 0.9;
+			padding: 1.2em;
+		}
+		.notify:hover {
+			opacity: 1;
+		}
+		.notify_title {
+			font-weight: bold;
+		}
+		.notify_title,
+		.notify_msg {
+			color: #FFF;
+			font-size: larger;
+			margin-bottom: 0.4em;
+			padding: 0 0.4em;
+		}
+		.notify > i {
+			float: left;
+		}
+		.notify_display > button {
+			float: right;
+		}
+		.notify > i.info {
+			color: blue;
+		}
+		.notify > i.warning {
+			color: yellow;
+		}
+		.notify > i.error {
+			color: red;
+		}
+		.notify > i.success {
+			color: green;
+		}
+		.notify > i.loading {
+			color: orange;
+		}
+		.notify {
+			-webkit-box-shadow: 0 0 12px #999;
+					box-shadow: 0 0 12px #999;
+		}
+		.notify:hover {
+			-webkit-box-shadow: 0 0 12px #000;
+					box-shadow: 0 0 12px #000;
+		}
+
+		/* Std MSOS CSS: No JavaScript message */
+		#no_javascript {
+			background-color: #FFF;
+			border: 2px solid #999;
+			border-radius: 0.4em;
+			margin-left: auto;
+			margin-right: auto;
+			width: 60%;
+		}
+		#no_javascript > i {
+			color: red;
+		}
+
 		/* Page specific */
         #drop_zone {
             border-width: 4px; 
@@ -29,10 +102,14 @@
     </style>
 
 	<script src="../mobilesiteos/msos/base.min.js"></script>
-	<script src="./config.js"></script>
+	<script defer src="./config.js"></script>
 </head>
-
-    <body>
+	<body>
+		<noscript>
+			<h3 id="no_javascript">
+				<i class="fa fa-ban"></i> We're sorry, but this site requires JavaScript be enabled!
+			</h3>
+		</noscript>
 
 		<div id="header" class="msos_navbar">
 			<ul class="breadcrumb">
@@ -307,5 +384,4 @@
 
         </script>
     </body>
-
 </html>
